feat(backend): device registration
